--- a/include/asm/Kbuild
+++ b/include/asm/Kbuild
@@ -3,6 +3,7 @@ generic-y += atomic.h
 generic-y += auxvec.h
 generic-y += barrier.h
 generic-y += bitsperlong.h
+generic-y += bug.h
 generic-y += bugs.h
 generic-y += cmpxchg.h
 generic-y += cputime.h
@@ -21,6 +22,7 @@ generic-y += hardirq.h
 generic-y += hw_irq.h
 generic-y += ioctl.h
 generic-y += irq_regs.h
+generic-y += ipcbuf.h
 generic-y += irq_work.h
 generic-y += kdebug.h
 generic-y += kmap_types.h
